<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_addMeeting"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sujet"
            android:padding="6dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_subject_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lieu"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField_subject"
            app:startIconDrawable="@drawable/ic_room_24px">

            <AutoCompleteTextView
                android:id="@+id/location_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_location"
            app:startIconDrawable="@drawable/ic_event_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/heure"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_date"
            app:startIconDrawable="@drawable/ic_timer_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="6dp"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_time"
            app:startIconDrawable="@drawable/ic_contact_mail_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addBtn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/ajouter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_mail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



