<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_overflow_button_create_meeting"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_filter_date"
                android:title="@string/filtrer_par_date"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_filter_room"
                android:title="@string/filtrer_par_pi_ces" />
        </menu>
    </item>

</menu>